--- a/index.html
+++ b/index.html
@@ -1,54 +1,17 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MailBox</title>
+    <title>Vue MailBox</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div id="mailbox">
-                    <h2>MailBox</h2>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <ul class="list-group">
-                                <li v-for="mail of mails" class="list-group-item">
-                                    <a href="#" @click.prevent="showMail(mail)">{{ mail.subject }}</a>
-                                    <br>
-                                    <small>{{ mail.date }}</small>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <div v-if="current">
-                                        <p><strong>From: </strong>{{ current.from }}</p>
-                                        <p><strong>Date: </strong>{{ current.date }}</p>
-                                        <p><strong>Subject: </strong>{{ current.subject }}</p>
-                                        <p><strong>Message: </strong><br>{{ current.body }}</p>
-                                    </div>
-                                    <div v-else>Select mail to read</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.6/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/1.0.3/vue-resource.min.js"></script>
-    <script src="js/app.js"></script>
+    <div id="app"></div>
 </body>
 </html>
